--- a/src/main/resources/templates/usr/category/fragment/list/table.html
+++ b/src/main/resources/templates/usr/category/fragment/list/table.html
@@ -1,21 +1,20 @@
 <table th:fragment="table(categories)"
-       class="mt-5 table w-full">
+       class="mt-5 table w-96">
 
     <thead>
     </thead>
 
     <tbody>
-    <tr class="hover flex"
+    <tr class="hover flex justify-between"
         th:each="category : ${categories}"
         th:object="${category}">
 
-        <td class="w-24">
+        <td>
             <a th:text="*{name}"
                th:href="@{/question/list/{id}(id=*{id})}"></a>
         </td>
-
         <td class="grow">
-            <a th:text="*{about}"
+            <a class="w-full"
                th:href="@{/question/list/{id}(id=*{id})}"></a>
         </td>
         <td>
