--- a/src/main/resources/templates/adm/members.html
+++ b/src/main/resources/templates/adm/members.html
@@ -2,11 +2,11 @@
 
 <head><title>전체 회원 관리</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
+<div layout:fragment="content" class="flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <div class="overflow-x-auto">
-        <table class="table">
+        <table class="table w-screen">
             <!-- head -->
             <thead>
             <tr>
