--- a/src/main/resources/templates/adm/members.html
+++ b/src/main/resources/templates/adm/members.html
@@ -5,6 +5,21 @@
 <div layout:fragment="content" class="flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
+    <div>
+        <div>
+            <form th:action method="get" class="flex flex-row">
+                <select name="searchBy" class="select select-bordered max-w-xs">
+                    <option value="username">username</option>
+                    <option value="nickname">nickname</option>
+                    <option value="role">role</option>
+                    <option value="status">status</option>
+                </select>
+                <input type="text" placeholder="검색어를 입력해주세요." class="input input-bordered w-full max-w-xs" name="kw" th:value="${kw}">
+                <button type="submit" class="btn">찾기</button>
+            </form>
+        </div>
+    </div>
+
     <div class="overflow-x-auto">
         <table class="table w-screen">
             <!-- head -->
