--- a/src/main/resources/templates/usr/category/top/list.html
+++ b/src/main/resources/templates/usr/category/top/list.html
@@ -2,9 +2,10 @@
 
 <head><title>카테고리 목록</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center">
 
-    <form th:replace="~{usr/category/fragment/list/table :: table(${categories})}"></form>
+    <form th:replace="~{usr/category/fragment/list/search :: search(${questionSearchForm})}"></form>
+    <table th:replace="~{usr/category/fragment/list/table :: table(${categories})}"></table>
 
     <div th:if="${@rq.login}"
          class="flex justify-end w-full">
