--- a/src/main/resources/templates/usr/question/top/search.html
+++ b/src/main/resources/templates/usr/question/top/search.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title th:text="|문제 목록|"></title></head>
+<head><title>문제 목록</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col">
 
@@ -14,7 +14,7 @@
     <div th:if="${@rq.login}"
          class="flex justify-end">
         <a th:if="${@rq.member.role eq role}"
-           th:href="@{/question/create/{id}(id=${category.id})}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
+           th:href="@{/question/create/{id}(id='-1')}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
 
 </div>
