--- a/src/main/resources/templates/usr/category/fragment/list/search.html
+++ b/src/main/resources/templates/usr/category/fragment/list/search.html
@@ -6,12 +6,27 @@
     <div class="form-control">
         <label class="input-group input-group-sm">
 
+
             <input type="text" th:field="*{tag}" placeholder="검색어 입력"
                    class="input input-bordered input-sm"/>
+
 
             <button class="btn btn-square btn-sm w-24">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
+
+<!--            <label for="my-modal-3" class="mt-3 text-lg ml-3">-->
+<!--                <i class="fa-solid fa-gear"></i></label>-->
+<!--            -->
+<!--            <input type="checkbox" id="my-modal-3" class="modal-toggle"/>-->
+<!--            <div class="modal">-->
+<!--                <div class="modal-box relative">-->
+<!--                    <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>-->
+<!--                    <h3 class="text-lg font-bold">상세 검색</h3>-->
+
+<!--                    -->
+<!--                </div>-->
+<!--            </div>-->
 
         </label>
 
