--- a/src/main/resources/static/common/common.css
+++ b/src/main/resources/static/common/common.css
@@ -22,3 +22,15 @@ html > body {
     height: 100%;
     object-fit: cover;
 }
+
+.tier-img-box {
+    width: 50%;
+    height: 50%;
+    overflow: hidden;
+}
+
+.tier-img {
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
+}
