--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -25,14 +25,38 @@
                             <i class="fa-regular fa-circle-user"></i>
                             프로필 이미지
                         </div>
-                        <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null && !@rq.hasSocialProfile()}">
-                            <img class="profile-img" th:src="@{/images/profile/{filename}(filename=${@rq.member.profileImg})}">
+                        <div>
+                            <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null && !@rq.hasSocialProfile()}">
+                                <img class="profile-img" th:src="@{/images/profile/{filename}(filename=${@rq.member.profileImg})}">
+                            </div>
+                            <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null && @rq.hasSocialProfile()}">
+                                <img class="profile-img" th:src="@{${@rq.member.profileImg}}">
+                            </div>
+                            <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg == null}">
+                                <img class="profile-img" src="/images/profile/no-image.png">
+                            </div>
                         </div>
-                        <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null && @rq.hasSocialProfile()}">
-                            <img class="profile-img" th:src="@{${@rq.member.profileImg}}">
+                    </div>
+                    <div class="mt-4">
+                        <div>
+                            <i class="fa-regular fa-circle-user"></i>
+                            내 티어
+                            <a class="badge" href="/member/increasePoint">포인트 증가</a>
+                            <a class="badge" href="/member/decreasePoint">포인트 감소</a>
                         </div>
-                        <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg == null}">
-                            <img class="profile-img" src="/images/profile/no-image.png">
+                        <div class="flex flex-col">
+                            <span class="badge" th:text="|${@rq.member.point}점|"></span>
+                            <div class="mt-2 tier-img-box">
+                                <img class="tier-img" th:if="${@rq.member.point >= 0 && @rq.member.point < 100}" src="/images/profile/tier/emblem-iron.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 100 && @rq.member.point < 200}" src="/images/profile/tier/emblem-bronze.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 200 && @rq.member.point < 300}" src="/images/profile/tier/emblem-silver.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 300 && @rq.member.point < 400}" src="/images/profile/tier/emblem-gold.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 400 && @rq.member.point < 500}" src="/images/profile/tier/emblem-platinum.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 500 && @rq.member.point < 600}" src="/images/profile/tier/emblem-diamond.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 600 && @rq.member.point < 700}" src="/images/profile/tier/emblem-master.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 700 && @rq.member.point < 800}" src="/images/profile/tier/emblem-grandmaster.png">
+                                <img class="tier-img" th:if="${@rq.member.point >= 800}" src="/images/profile/tier/emblem-challenger.png">
+                            </div>
                         </div>
                     </div>
 
