feat: git hub action ci 적용 (#53)
* design: 카테고리 리스트 ui 수정

* feat: tag 검색 service 구현 / test 완료

* feat: 태그로 검색 기능 구현

* feat: 카테고리 내에서 검색기능 구현중

* fix: 어드민으로 문제 검색시 발생하는 오류 해결

* design: 문제 검색 ui 변경중

* docs: 인증키 ignore

* docs: 인증키 ignore

* docs: ci setting

--- a/src/main/resources/templates/usr/category/top/list.html
+++ b/src/main/resources/templates/usr/category/top/list.html
@@ -2,12 +2,13 @@
 
 <head><title>카테고리 목록</title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col gap-12">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center">
 
-    <form th:replace="~{usr/category/fragment/list/table :: table(${categories})}"></form>
+    <form th:replace="~{usr/category/fragment/list/search :: search(${questionSearchForm})}"></form>
+    <table th:replace="~{usr/category/fragment/list/table :: table(${categories})}"></table>
 
     <div th:if="${@rq.login}"
-         class="flex justify-end">
+         class="flex justify-end w-full">
         <a th:if="${@rq.member.role eq role}"
            th:href="@{/category/create}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
