chore : result 자잘한 수정

--- a/src/main/resources/templates/usr/answer/top/result.html
+++ b/src/main/resources/templates/usr/answer/top/result.html
@@ -15,7 +15,7 @@
 
 
                 <span class="badge mb-3">문제 정답 여부</span>
-                <p th:text="${answer.getResult()}"></p>
+                <p class="mb-5"th:text="${answer.getResult()}"></p>
             </div>
         </li>
     </ul>
