--- a/src/main/resources/templates/usr/community/list.html
+++ b/src/main/resources/templates/usr/community/list.html
@@ -1,23 +1,29 @@
+<!-- list.html -->
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
-    <title>in hub</title>
+    <title>게시글 리스트 페이지</title>
 </head>
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
-    <h1 class="text-2xl font-bold mb-4">커뮤니티</h1>
-
-    <div class="tabs flex justify-between w-full">
-        <div class="tab">
-            <input type="radio" name="tab" id="tab1" class="hidden" checked>
-            <label for="tab1" class="tab-label font-semibold">자유게시판</label>
-            <div class="tab-content">
-
-            </div>
-        </div>
-        <!-- 새로운 게시판 추가 기능 -->
-        <a href="/community/create" class="btn btn-primary">게시판 추가</a>
-                </form>
-            </div>
-        </div>
-</div>
+    <table>
+        <thead>
+        <tr>
+            <th>글번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>작성 일자</th>
+            <th>조회수</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="post: ${postList}">
+            <td th:text="${post.id}">1</td>
+            <td><a th:href="@{|/community/view/${post.id}|}" th:text="${post.title}"></a></td>
+            <td th:text="${post.username}"></td>
+            <td th:text="*{#temporals.format(post.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+            <td th:text="${post.postHits}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <a href="/community/create" class="btn btn-primary">글쓰기</a>
 </div>
 </html>
