--- a/src/main/resources/templates/usr/community/view.html
+++ b/src/main/resources/templates/usr/community/view.html
@@ -1,20 +1,14 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
-
 <head>
-  <title>게시판 상세보기</title>
+  <title>게시물 상세 보기</title>
 </head>
-
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
-
-  <h1>게시판 상세보기</h1>
-
-  <div>
-    <p><strong>ID:</strong> <span th:text="${community.id}"></span></p>
-    <p><strong>제목:</strong> <span th:text="${community.title}"></span></p>
-    <p><strong>내용:</strong></p>
-    <p><span th:text="${community.content}"></span></p>
+  <div class="post-details">
+    <h1 class="text-2xl font-bold mb-4" th:text="${post.title}"></h1>
+    <p class="text-gray-500" th:text="${#temporals.format(post.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
+    <p class="text-gray-500" th:text="${post.username}"></p>
+    <p th:text="${post.content}"></p>
   </div>
-
+  <a href="/community/list" class="btn btn-primary">목록으로 돌아가기</a>
 </div>
-
 </html>
