--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -1,20 +1,35 @@
 <div th:fragment="navbarFragment"
      class="btm-nav bg-base-100">
-    <a th:href="@{/}">
+    <a th:href="@{/}" class="flex col">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
+        <span class="text-[8px]">
+            홈
+        </span>
     </a>
-    <a>
+    <a class="flex col">
         <i class="fa-regular fa-comments"></i>
+        <span class="text-[8px]">
+            커뮤니티
+        </span>
     </a>
     <a class="active"
        th:href="@{/question/function}">
         <i class="fa-regular fa-circle-play"></i>
+        <span class="text-[8px]">
+            문제 풀기
+        </span>
     </a>
-    <a th:href="@{/category/list}">
+    <a th:href="@{/category/list}" class="flex col">
         <i class="fa-solid fa-list-ul"></i>
+        <span class="text-[8px]">
+            문제 목록
+        </span>
     </a>
-    <a th:href="@{/member/mypage}">
+    <a th:href="@{/member/mypage}" class="flex col">
         <i class="fa-regular fa-user"></i>
+        <span class="text-[8px]">
+            내정보
+        </span>
     </a>
 
 </div>
