fix: 게시글 작성시 발생하는 403에러 해결

--- a/src/main/resources/templates/usr/community/create.html
+++ b/src/main/resources/templates/usr/community/create.html
@@ -11,14 +11,14 @@
                     제 목
                 </span>
                 <input class="input input-bordered w-full ml-[10px]" autocomplete="off"
-                       placeholder="제목을 입력해주세요." name="post.title" type="text">
+                       placeholder="제목을 입력해주세요." name="title" type="text">
             </div>
             <div class="detail__body flex flex-col min-h-[400px] mt-[10px]">
                 <span class="badge w-[100px]">
                     내 용
                 </span>
                 <textarea class="textarea textarea-bordered flex-grow mt-[10px]" autocomplete="off"
-                          placeholder="내용을 입력해주세요." name="post.content" type="text"></textarea>
+                          placeholder="내용을 입력해주세요." name="content" type="text"></textarea>
             </div>
         </div>
         <div class="btns flex justify-end gap-x-[10px]">
