--- a/src/main/resources/templates/usr/question/top/list.html
+++ b/src/main/resources/templates/usr/question/top/list.html
@@ -15,7 +15,7 @@
     <div th:if="${@rq.login}"
          class="flex justify-end">
         <a th:if="${@rq.member.role ne role}"
-           th:href="@{/question/create/{id}(id='1')}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
+           th:href="@{/question/create/{id}(id=${category.id})}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
 
 </div>
