feat: 내 포인트 변동 그래프 기능 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -15,6 +15,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
   <link rel="stylesheet" href="https://jhs512.github.io/toastr/toastr.css">
 
+  <!-- chart.js 불러오기 -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+
   <!-- 공통 JS 불러오기 -->
   <script src="/common/common.js"></script>
   <!-- 공통 CSS 불러오기 -->
