--- a/src/main/resources/templates/usr/question/top/list.html
+++ b/src/main/resources/templates/usr/question/top/list.html
@@ -14,8 +14,8 @@
 
     <div th:if="${@rq.login}"
          class="flex justify-end">
-        <a th:if="${@rq.member.role eq role}"
-           th:href="@{/question/create/{id}(id='1')}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
+        <a th:if="${@rq.member.role ne role}"
+           th:href="@{/question/create/{id}(id=${category.id})}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
 
 </div>
