feat: 문제 다 풀고 제출 안되는 문제 해결

--- a/src/main/resources/templates/usr/question/fragment/play/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/play/nav.html
@@ -13,14 +13,11 @@
 
 
         <button>
-            <i class="fa-solid fa-chevron-right"></i>
+            <i th:if="${page ne size}"
+               class="fa-solid fa-chevron-right"></i>
+            <i th:if="${page eq size}"
+               class="fa-solid fa-flag-checkered"></i>
         </button>
-
-
-        <a th:if="${page eq size}"
-           th:href="@{/question/submit}">
-            <i class="fa-regular fa-square-check"></i>
-        </a>
 
     </div>
 
