design: 광고 배너 최대 사이즈 제한

--- a/src/main/resources/templates/usr/home/fragment/index/ad.html
+++ b/src/main/resources/templates/usr/home/fragment/index/ad.html
@@ -1,5 +1,5 @@
 <div th:fragment="ad"
-     class="carousel w-full h-24">
+     class="carousel w-full max-w-md h-14">
 
     <div id="item1" class="carousel-item w-full bg-white">
         <img src="/images/ad/001.png" class="w-full" />
