feat: 게시글 삭제 기능 구현 (#63)
* fix: 충돌 해결

* feat: PostService 작업

* feat: create.html 작업

* feat: list.html 작업

* feat: PostController 추가

* refactor: Community, Post 전면 재 수정

* fix: 게시글 작성시 발생하는 403에러 해결

* feat: 게시글 삭제 기능 구현

* chore: 에러 확인용

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -6,6 +6,7 @@
             홈
         </span>
     </a>
+    <a th:href="@{/community/list}">
     <a class="flex col">
         <i class="fa-regular fa-comments"></i>
         <span class="text-[8px]">
