design: 메인 페이지 ui 업데이트

--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -5,6 +5,8 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-8 bg-base-300">
 
     <div th:replace="~{usr/home/fragment/index/ad :: ad}"></div>
+    <div th:replace="~{usr/home/fragment/index/login :: login}"></div>
+    <div th:replace="~{usr/home/fragment/index/play :: play}"></div>
     <div th:replace="~{usr/home/fragment/index/note :: note}"></div>
 
 
