--- a/src/main/resources/templates/usr/home/fragment/index/play.html
+++ b/src/main/resources/templates/usr/home/fragment/index/play.html
@@ -8,7 +8,7 @@
         <div class="stats shadow w-80">
 
             <div class="max-h-24">
-                <img class="w-full h-full" src="https://images.unsplash.com/photo-1532437686671-7a4c1daee487?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80">
+                <img class="w-full h-full" src="https://images.unsplash.com/photo-1600492515568-8868f609511e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1550&q=80">
             </div>
 
             <div class="stat place-items-center">
@@ -50,7 +50,7 @@
             <div class="stat place-items-center">
                 <div class="stat-title">내가 만든 문제</div>
                 <div class="text-xs">내가 만든 문제 목록 확인하기</div>
-                <div class="stat-desc" th:text="|총 ${@rq.member.questions} 문제 출제|"></div>
+                <div class="stat-desc" th:text="|총 ${@rq.member.questions.size()} 문제 출제|"></div>
             </div>
 
         </div>
