fix: 게시글 작성 안되는 에러 해결

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -6,8 +6,7 @@
             홈
         </span>
     </a>
-    <a th:href="@{/community/list}">
-    <a class="flex col">
+    <a th:href="@{/community/list}" class="flex col">
         <i class="fa-regular fa-comments"></i>
         <span class="text-[8px]">
             커뮤니티
