--- a/src/main/resources/templates/usr/community/view.html
+++ b/src/main/resources/templates/usr/community/view.html
@@ -6,7 +6,7 @@
   <div class="post-details">
     <h1 class="text-2xl font-bold mb-4" th:text="${post.title}"></h1>
     <p class="text-gray-500" th:text="${#temporals.format(post.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
-    <p class="text-gray-500" th:text="${post.username}"></p>
+    <p class="text-gray-500" th:text="${post.authorNickname}"></p>
     <p th:text="${post.content}"></p>
     <form th:action="@{/community/delete/{postId}(postId=${post.id})}" method="post" id="deleteForm" onsubmit="return confirmDelete()">
       <input type="hidden" name="_method" value="DELETE">
