fix: 문제 풀고 결과 리스트 페이지로 연결 (#67)
* design: 메인 페이지 ui 업데이트

* design: 메인 페이지 이미지 업데이트

* design: 객관식 상세페이지 정답 0번에 체크되게 임시로 변경

* feat: 랜덤문제 정답 페이지 만드는중

* fix: 문제 풀고 결과 리스트 페이지로 연결

--- a/src/main/resources/templates/usr/question/fragment/detail/content.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/content.html
@@ -9,7 +9,7 @@
              class="form-control">
             <label class="label cursor-pointer">
                 <span class="label-text" th:text="|${roop.count}.  ${choice.choice}|"></span>
-                <input type="radio" name="radio-10" class="radio checked:bg-red-500" th:checked="${choice.number eq check.content}"/>
+                <input type="radio" name="radio-10" class="radio checked:bg-red-500" th:checked="${choice.number eq check.content}" disabled/>
             </label>
         </div>
 
