--- a/src/main/resources/templates/usr/home/fragment/index/login.html
+++ b/src/main/resources/templates/usr/home/fragment/index/login.html
@@ -5,15 +5,15 @@
       <div class="text-sm mb-2">로그인 하고 문제 풀기</div>
 
       <div class="flex gap-5">
-        <a class="btn btn-circle btn-sm" href="/oauth2/authorization/github">
+        <a class="btn btn-circle btn-sm" style="border: none;" href="/oauth2/authorization/github">
           <i class="fa-brands fa-github fa-2xl text-xl" style="color: white;"></i>
         </a>
 
-        <a class="btn btn-circle btn-sm" style="background-color: #ff4000" href="/oauth2/authorization/google">
+        <a class="btn btn-circle btn-sm" style="background-color: #ff4000; border: none;" href="/oauth2/authorization/google">
           <i class="fa-brands fa-google fa-2xl text-xl" style="color: white;"></i>
         </a>
 
-        <a class="btn btn-circle btn-sm"style="background-color: #ffe812" href="/oauth2/authorization/kakao">
+        <a class="btn btn-circle btn-sm"style="background-color: #ffe812; border: none;" href="/oauth2/authorization/kakao">
           <i class="fa-solid fa-comment fa-2xl text-xl" style="color: #000000;"></i>
         </a>
       </div>
