--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -70,54 +70,18 @@
             </div>
 
             <div class="flex gap-5">
-                <a class="btn btn-circle" href="/oauth2/authorization/github">
+                <a class="btn btn-circle" style="border: none;" href="/oauth2/authorization/github">
                     <i class="fa-brands fa-github fa-2xl" style="color: white;"></i>
                 </a>
 
-                <a class="btn btn-circle" style="background-color: #ff4000" href="/oauth2/authorization/google">
+                <a class="btn btn-circle" style="background-color: #ff4000; border: none;" href="/oauth2/authorization/google">
                     <i class="fa-brands fa-google fa-2xl" style="color: white;"></i>
                 </a>
 
-                <a class="btn btn-circle"style="background-color: #ffe812" href="/oauth2/authorization/kakao">
+                <a class="btn btn-circle"style="background-color: #ffe812; border: none;" href="/oauth2/authorization/kakao">
                     <i class="fa-solid fa-comment fa-2xl" style="color: #000000;"></i>
                 </a>
             </div>
-
-<!--            <div class="btn-group btn-group-vertical">-->
-<!--                <a class="btn btn-outline" style="text-decoration: none" href="/oauth2/authorization/kakao">-->
-<!--                    <i class="fa-solid fa-comment mr-1" style="color: #ffe812;"></i>카카오 로그인-->
-<!--                </a>-->
-
-<!--                <a class="btn btn-outline" style="text-decoration: none" href="/oauth2/authorization/google">-->
-<!--                    <i class="fa-brands fa-google mr-1" style="color: #ff4000;"></i>구글 로그인-->
-<!--                </a>-->
-
-<!--                <a class="btn btn-outline" style="text-decoration: none" href="/oauth2/authorization/github">-->
-<!--                    <i class="fa-brands fa-github mr-1" style="color: white;"></i> 깃허브 로그인-->
-<!--                </a>-->
-
-<!--            </div>-->
-
-<!--            <button class="btn btn-circle">-->
-<!--                <i class="fa-brands fa-github fa-2xl" style="color: white;"></i>-->
-<!--            </button>-->
-
-<!--            <button class="btn btn-circle">-->
-<!--                <i class="fa-brands fa-google fa-2xl" style="color: #ff4000;"></i>-->
-<!--            </button>-->
-
-<!--            <button class="btn btn-circle">-->
-<!--                <i class="fa-solid fa-comment fa-2xl" style="color: #ffe812;"></i>-->
-<!--            </button>-->
-
-<!--            <button class="btn btn-circle btn-outline">-->
-<!--                <i class="fa-brands fa-github fa-2xl" style="color: white;"></i>-->
-<!--            </button>-->
-
-<!--            <button class="btn btn-outline">-->
-<!--                <i class="fa-brands fa-github fa-2xl" style="color: white;"></i>-->
-<!--            </button>-->
-
         </form>
     </div>
 
