--- a/src/main/resources/templates/usr/answer/fragment/result/quetie.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/quetie.html
@@ -1,3 +1,3 @@
-<div th:fragment="quetie(question) " class="rating rating-xs">
-    <p class="mb-5" th:text="${question.category.name}"></p>
+<div th:fragment="quetie(question) " >
+    <p class="mb-5" th:text="${question.name}"></p>
 </div>
